fix: dark mode styles

--- a/online-zoo/assets/sass/_favor.scss
+++ b/online-zoo/assets/sass/_favor.scss
@@ -111,13 +111,13 @@
     border-style: solid;
     border-color: transparent;
 
-    background-image: -webkit-linear-gradient(white, white),
+    background-image: -webkit-linear-gradient($gray-6, $gray-6),
       -webkit-linear-gradient(to right, #07eee0 0%, #df496d 100%);
-    background-image: -moz-linear-gradient(white, white),
+    background-image: -moz-linear-gradient($gray-6, $gray-6),
       -moz-linear-gradient(to right, #07eee0 0%, #df496d 100%);
-    background-image: -o-linear-gradient(white, white),
+    background-image: -o-linear-gradient($gray-6, $gray-6),
       -o-linear-gradient(to right, #07eee0 0%, #df496d 100%);
-    background-image: linear-gradient(white, white),
+    background-image: linear-gradient($gray-6, $gray-6),
       linear-gradient(to right, #07eee0 0%, #df496d 100%);
 
     background-origin: border-box;
@@ -173,5 +173,24 @@ body.dark {
     outline: none;
     border: none;
     background: $gray-2;
+
+    path {
+      fill: $base;
+    }
+  }
+
+  .button__form {
+    background-image: -webkit-linear-gradient($gray-2, $gray-2),
+      -webkit-linear-gradient(to right, #07eee0 0%, #df496d 100%);
+    background-image: -moz-linear-gradient($gray-2, $gray-2),
+      -moz-linear-gradient(to right, #07eee0 0%, #df496d 100%);
+    background-image: -o-linear-gradient($gray-2, $gray-2),
+      -o-linear-gradient(to right, #07eee0 0%, #df496d 100%);
+    background-image: linear-gradient($gray-2, $gray-2),
+      linear-gradient(to right, #07eee0 0%, #df496d 100%);
+  }
+  .button__form:hover {
+    background-image: linear-gradient($gray-2, $gray-2),
+      linear-gradient(to right, #df496d 0%, #07eee0 100%);
   }
 }
